# task-manager-API

./: .env  .gitignore  .gitmodules  CMakeLists.txt  README.md
include/task_manager/: router.hpp
include/task_manager/handlers/: task_handler.hpp
include/task_manager/middleware/: logger.hpp
src/: main.cpp  router.cpp  server.cpp
src/handlers/: task_handler.cpp
